force-app/main/default/objects/User/fields/ActivateRotation__c.field-meta.xml
<CustomField>
    <fullName>ActivateRotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate rotation</label>
    <type>Checkbox</type>
</CustomField>