force-app/main/default/objects/User/fields/LoadingPicture__c.field-meta.xml
<CustomField>
    <fullName>LoadingPicture__c</fullName>
    <inlineHelpText>replace the spinner by the provided picture</inlineHelpText>
    <label>Loading picture</label>
    <type>Url</type>
</CustomField>