force-app/main/default/objects/User/fields/PermissionSetAttributionTest__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetAttributionTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to validate unit test of UserPermissionSet class</description>
    <label>PermissionSetAttributionTest</label>
    <type>Checkbox</type>
</CustomField>